# rtest

./: .gitignore  Projekt_Semester_3.sln  ReadMe.md  rar_shot  test.sh
VL3_Semester3/: Projekt_Semester_3.cpp  ReadMe.txt  VL3_Semester3.cpp  VL3_Semester3.vcxproj  VL3_Semester3.vcxproj.filters  stdafx.cpp
cmake/: CMakeLists.txt
media/: fireball.kra  ship.kra  sternenhimmel.kra
src/: main.cpp
